--- a/jobplus/templates/base.html
+++ b/jobplus/templates/base.html
@@ -4,6 +4,7 @@
 		<meta  charset="UTF-8">
 		<title>{% block title %}{% endblock %}</title>
 		<link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+		<link href="{{ url_for('static',filename='main.css')}}" rel="stylesheet">
 	</head>
 	<body>
 	  <nav class="navbar navbar-inverse">
@@ -24,17 +25,39 @@
                      <li><a href="#">公司</a></li>
                   </ul>
                   <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">用户注册</a></li>
-                        <li><a href="#">公司注册</a></li>
-                        <li><a href="#">登录</a></li>
-                   </ul>
+				    {% if not current_user.is_authenticated %}
+                        <li><a href="{{url_for('front.user_register')}}">用户注册</a></li>
+                        <li><a href="{{url_for('front.company_register')}}">公司注册</a></li>
+                        <li><a href="{{url_for('front.login')}}">登录</a></li>
+                     {% else %}
+					    <li class="dropdown">
+						  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="botton" aria-haspopup="true" aria-expanded="flase">{{ current_user.username }}<span class="caret"></span></a>
+						  <ul class="dropdown-menu">
+						    <li><a href="#">个人主页</a></li>
+							<li role="separator" class="divider"></li>
+							<li><a href="{{ url_for('fornt.logout')}}">退出登录</a></li>
+						  </ul>
+						</li>
+					  {% endif %}
+				   </ul>
                   </div>
                 </div>
             </nav>
 
 		<div class='container'>
-			{% block body %}{% endblock %}
-			{% block footer %}Copyright &copy;2019 by shiyanlou{% endblock %}
+		  {% with messages = get_flashed_messages(with_categories=true) %}
+		    {% if messages %}
+			{% for category,message in messages %}
+			<div class="alert alert-{{ category }} alert-dismissible" role="alert">
+			  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+			  {{ message }}
+			</div>
+			{% endfor %}
+			{% endif %}
+		   {% endwith %}
+
+		   {% block body %}{% endblock %}
+		   {% block footer %}Copyright &copy;2019 by shiyanlou{% endblock %}
 		</div>
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
