--- a/jobplus/templates/base.html
+++ b/jobplus/templates/base.html
@@ -31,11 +31,11 @@
                         <li><a href="{{url_for('front.login')}}">登录</a></li>
                      {% else %}
 					    <li class="dropdown">
-						  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="botton" aria-haspopup="true" aria-expanded="flase">{{ current_user.username }}<span class="caret"></span></a>
+						  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="botton" aria-haspopup="true" aria-expanded="flase">{{ current_user.name }}<span class="caret"></span></a>
 						  <ul class="dropdown-menu">
 						    <li><a href="#">个人主页</a></li>
 							<li role="separator" class="divider"></li>
-							<li><a href="{{ url_for('fornt.logout')}}">退出登录</a></li>
+							<li><a href="{{ url_for('front.logout')}}">退出登录</a></li>
 						  </ul>
 						</li>
 					  {% endif %}
