--- a/jobplus/templates/base.html
+++ b/jobplus/templates/base.html
@@ -34,7 +34,13 @@
 
                           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="botton" aria-haspopup="true" aria-expanded="flase">{{ current_user.name }}<span class="caret"></span></a>
                           <ul class="dropdown-menu">
-                            <li><a href="#">个人主页</a></li>
+                              {% if current_user.is_user %}
+                              <li><a href="{{url_for('user.profile')}}">个人主页</a></li>
+                              {% elif current_user.is_company %}
+                              <li><a href="{{url_for('company.profile')}}">个人主页</a></li>
+                              {% else  %}
+                              <li><a href="{{url_for('admin.index')}}">控制台</a></li>
+                              {% endif %}
                             <li role="separator" class="divider"></li>
                             <li><a href="{{ url_for('front.logout')}}">退出登录</a></li>
 
